fixes spacing issues on searchbar after body loads

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -144,12 +144,17 @@ h1 {
   background-image: linear-gradient(0deg, #b880b8 0%, #89c9d1 100%);
   background-color: rgba(178, 235, 253, 0.58);
   display: flex;
-  align-items: center;
+  flex: 0;
+  min-height: 50px;
+  
   justify-content: space-between;
+
   border-radius: 8px;
 }
 
 .queryFormContainer input {
+  display: flex;
+  align-items: center;
   flex: 1;
   height: 100%;
   border: 0;
@@ -201,7 +206,6 @@ h1 {
   max-height: 4rem;
   border-width: 0.1rem;
   cursor: pointer;
-
   color: black;
 }
 
